--- a/.stylelintrc
+++ b/.stylelintrc
@@ -4,10 +4,7 @@
     "at-rule-no-unknown": [
       true,
       {
-        "ignoreAtRules": [
-          "extends",
-          "tailwind"
-        ]
+        "ignoreAtRules": ["extends", "tailwind"]
       }
     ],
     "block-no-empty": null
