--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.10",
+    "chokidar": "^3.5.3",
     "css-loader": "^6.8.1",
     "glob-parent": "^6.0.2",
     "icss-utils": "^5.1.0",
@@ -23,7 +24,11 @@
     "postcss-modules-scope": "^3.0.0",
     "postcss-modules-values": "^4.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "resolve-url": "^0.2.1",
+    "source-map-resolve": "^0.6.0",
+    "source-map-url": "^0.4.1",
+    "urix": "^0.1.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
